--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,3 +1,26 @@
 backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
+
+media_folder: "static/uploads"
+public_folder: "uploads"
+
+collections:
+  - name: "Articles"
+    label: "My Articles"
+    folder: "content/articles"
+    create: true
+    slug: "{{year}}-{{month}}-{{slug}}"
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "date"}
+      - {label: "Draft", name: "draft", widget: "boolean", default: true}
+      - {label: "Categories", name: "categories", widget: "string"}
+      - {label: "Tags", name: "tags", widget: "list", required: false}
+      - {label: Author, name: author, widget: hidden, default: Juan Avalos}
+      - {label: Author Image, name: authorImage, widget: hidden, default: "uploads/juan.png"}
+      - {label: "Header Image", name: image, widget: image, required: true}
+      - {label: Commenting, name: comments, widget: boolean, default: true}
+      - {label: Sharing, name: share, widget: boolean, default: true}
+      - {label: Type, name: type, widget: hidden, default: "post"}
+      - {label: "Body", name: "body", widget: "markdown"}
