--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,7 +19,7 @@ collections:
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: Author, name: author, widget: hidden, default: Juan Avalos}
       - {label: Author Image, name: authorImage, widget: hidden, default: "uploads/juan.png"}
-      - {label: "Header Image", name: image, widget: image, required: true}
+      - {label: "Header Image", name: image, widget: image, required: false}
       - {label: Commenting, name: comments, widget: boolean, default: true}
       - {label: Sharing, name: share, widget: boolean, default: true}
       - {label: Type, name: type, widget: hidden, default: "post"}
