Changed SOcial Media on Site

--- a/config.toml
+++ b/config.toml
@@ -17,8 +17,8 @@ paginate        = 6
   RSSLink = ""
 
   twitterName = "MrJuantastic"
-  fbName = "fakeghost"
-  githubName = "eueung"
+  igName = "mr_juantastic"
+  githubName = "MrJuantastic"
 
   logo = ""
   orgName = "Juan Avalos"
