--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ paginate        = 6
   title       = "Juan Avalos"
   subtitle    = "Writer | Engineer | Coffee Enthusiast"
 
-  cover       = "uploads/coverphoto.jpg"
+  cover       = "uploads/juan_fish_slp_2.jpg"
   description = "Professional Portfolio and Creative Outlet"
   metaDescription = ""
   googleAnalytics = ""
