Added Author Description

--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ paginate        = 6
   authorAvatar = "uploads/juan.png"
   authorLocation = "Austin, TX"
   authorWebsite = "https://juanavalos.netlify.com"
-  authorDescription = "TBD"
+  authorDescription = "I am engineer and aspiring writer with a passion to tell stories that foster hope, inspiration, and empowerment for current and future generations. Besides that I am a coffee enthusiast, a dad joke aficionado, a fantasy football fanatic and a dog lover. "
 
   pageNotFoundTitle = "404 - Page not found"
 
