--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,7 +15,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Draft", name: "draft", widget: "boolean", default: true}
-      - {label: "Categories", name: "portfolio", widget: "string"}
+      - {label: "Portfolio", name: "categories", widget: "string"}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: Author, name: author, widget: hidden, default: Juan Avalos}
       - {label: Author Image, name: authorImage, widget: hidden, default: "uploads/juan.png"}
