--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl         = "https://juanavalos.netlify.com"
+baseurl         = "https://juanavalos.netlify.com/"
 theme           = "hugo-casper-two"
 languageCode    = "en-US"
 disqusShortname = "juanavalos"
