Change Social Mededia Handles

--- a/config.toml
+++ b/config.toml
@@ -17,8 +17,8 @@ title           = "Juan Avalos"
   customCSS = []
   RSSLink = ""
 
-  twitterName = "MrJuantastic"
-  igName = "mr_juantastic"
+  twitterName = "MrJuantastico"
+  igName = "mr_juantastico"
   githubName = "MrJuantastic"
 
   logo = ""
