--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ title           = "Juan Avalos"
   RSSLink = ""
 
   twitterName = "MrJuantastico"
-  igName = "mr_juantastico"
+  igName = "MrJuantastico"
   githubName = "MrJuantastic"
 
   logo = ""
